Fixed GetAllReports
